// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: error 1`] = `
<Card
  className="curiosity-card curiosity-inventory-card"
  isPlain={true}
>
  <MinHeight>
    <CardHeader
      actions={
        {
          "actions": <Toolbar
            className="curiosity-toolbar"
            collapseListedFiltersBreakpoint="sm"
          >
            <ToolbarContent
              className="curiosity-toolbar__content"
              isExpanded={false}
              showClearFiltersButton={false}
            >
              <ForwardRef
                align={
                  {
                    "default": "alignEnd",
                  }
                }
                aria-hidden={true}
                className="curiosity-toolbar__group transparent"
              >
                <Pagination
                  isCompact={true}
                  isDisabled={true}
                />
              </ForwardRef>
            </ToolbarContent>
          </Toolbar>,
          "className": "curiosity-card__actions",
        }
      }
      aria-hidden={true}
      className="curiosity-card__header hidden"
    />
  </MinHeight>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <ErrorMessage
        title="t(curiosity-inventory.error_title_service, {"http":400,"context":"status","count":1})"
      />
    </CardBody>
  </MinHeight>
  <MinHeight>
    <CardFooter
      aria-hidden={true}
      className="curiosity-card__footer hidden"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isDisabled={true}
          variant="bottom"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: fulfilled 1`] = `
<Card
  className="curiosity-card curiosity-inventory-card"
  isPlain={true}
>
  <MinHeight>
    <CardHeader
      actions={
        {
          "actions": <Toolbar
            className="curiosity-toolbar"
            collapseListedFiltersBreakpoint="sm"
          >
            <ToolbarContent
              className="curiosity-toolbar__content"
              isExpanded={false}
              showClearFiltersButton={false}
            >
              <ForwardRef
                align={
                  {
                    "default": "alignEnd",
                  }
                }
                aria-hidden={true}
                className="curiosity-toolbar__group transparent"
              >
                <Pagination
                  isCompact={true}
                />
              </ForwardRef>
            </ToolbarContent>
          </Toolbar>,
          "className": "curiosity-card__actions",
        }
      }
      aria-hidden={false}
      className="curiosity-card__header "
    />
  </MinHeight>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <div
        className=""
      >
        <Table
          ariaLabelTable="t(curiosity-inventory.table, {"context":"ariaLabel","appName":"Subscriptions"})"
          className="curiosity-inventory-list"
          columnHeaders={[]}
          emptyTable={
            {
              "ariaLabel": "t(curiosity-inventory.table, {"context":"ariaLabel","appName":"Subscriptions"})",
              "className": "curiosity-inventory-list",
              "message": "t(curiosity-inventory.table_emptyState, {"context":"description"})",
              "summary": "t(curiosity-inventory.table, {"context":"summary"})",
              "title": "t(curiosity-inventory.table_emptyState, {"context":"title"})",
            }
          }
          isBorders={true}
          isHeader={true}
          rows={[]}
          summary="t(curiosity-inventory.table, {"context":"summary"})"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight>
    <CardFooter
      aria-hidden={true}
      className="curiosity-card__footer transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          variant="bottom"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: pending 1`] = `
<Card
  className="curiosity-card curiosity-inventory-card"
  isPlain={true}
>
  <MinHeight>
    <CardHeader
      actions={
        {
          "actions": <Toolbar
            className="curiosity-toolbar"
            collapseListedFiltersBreakpoint="sm"
          >
            <ToolbarContent
              className="curiosity-toolbar__content"
              isExpanded={false}
              showClearFiltersButton={false}
            >
              <ForwardRef
                align={
                  {
                    "default": "alignEnd",
                  }
                }
                aria-hidden={true}
                className="curiosity-toolbar__group transparent"
              >
                <Pagination
                  isCompact={true}
                  isDisabled={true}
                />
              </ForwardRef>
            </ToolbarContent>
          </Toolbar>,
          "className": "curiosity-card__actions",
        }
      }
      aria-hidden={false}
      className="curiosity-card__header "
    />
  </MinHeight>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <div
        className="fadein"
      >
        <Loader
          tableProps={
            {
              "ariaLabel": "t(curiosity-inventory.table, {"context":"ariaLabel","appName":"Subscriptions"})",
              "className": "curiosity-inventory-list",
              "colCount": 1,
              "colWidth": [],
              "isHeader": true,
              "rowCount": undefined,
              "summary": "t(curiosity-inventory.table, {"context":"summary"})",
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight>
    <CardFooter
      aria-hidden={true}
      className="curiosity-card__footer transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isDisabled={true}
          variant="bottom"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should render a basic component: basic render 1`] = `
<Card
  className="curiosity-card curiosity-inventory-card"
  isPlain={true}
>
  <MinHeight>
    <CardHeader
      actions={
        {
          "actions": <Toolbar
            className="curiosity-toolbar"
            collapseListedFiltersBreakpoint="sm"
          >
            <ToolbarContent
              className="curiosity-toolbar__content"
              isExpanded={false}
              showClearFiltersButton={false}
            >
              <ForwardRef
                align={
                  {
                    "default": "alignEnd",
                  }
                }
                aria-hidden={true}
                className="curiosity-toolbar__group transparent"
              >
                <Pagination
                  isCompact={true}
                  isDisabled={true}
                />
              </ForwardRef>
            </ToolbarContent>
          </Toolbar>,
          "className": "curiosity-card__actions",
        }
      }
      aria-hidden={false}
      className="curiosity-card__header "
    />
  </MinHeight>
  <MinHeight>
    <CardBody
      className="curiosity-card__body"
    >
      <div
        className="fadein"
      >
        <Loader
          tableProps={
            {
              "ariaLabel": "t(curiosity-inventory.table, {"context":"ariaLabel","appName":"Subscriptions"})",
              "className": "curiosity-inventory-list",
              "colCount": 1,
              "colWidth": [],
              "isHeader": true,
              "rowCount": undefined,
              "summary": "t(curiosity-inventory.table, {"context":"summary"})",
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight>
    <CardFooter
      aria-hidden={true}
      className="curiosity-card__footer transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isDisabled={true}
          variant="bottom"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should return an empty render when disabled: disabled 1`] = `
<Card
  className="curiosity-inventory-card__disabled"
>
  <CardBody>
    <Bullseye>
      t(curiosity-inventory.tab, {"context":"disabled"})
    </Bullseye>
  </CardBody>
</Card>
`;

exports[`InventoryCard Component should return an empty render when disabled: missing filters 1`] = `
<Card
  className="curiosity-inventory-card__disabled"
>
  <CardBody>
    <Bullseye>
      t(curiosity-inventory.tab, {"context":"disabled"})
    </Bullseye>
  </CardBody>
</Card>
`;
